# central_uni_bootcamp

./: .gitignore  README.md  docker-compose.yml  openapi.yaml  package-lock.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  sql_app.db
backend/api/: deps.py  utils.py
backend/api/v1/: api.py
backend/api/v1/endpoints/: auth.py  boards.py  sharing.py  stickers.py  users.py  websocket.py
backend/core/: config.py  database.py  security.py  websocket.py
backend/models/: __init__.py  access.py  board.py  permission.py  sticker.py  user.py
backend/schemas/: auth.py  board.py  sharing.py  stickers.py  user.py
backend/tests/: conftest.py
backend/tests/api/v1/: test_users.py
backend/tests/e2e/: __init__.py  test_auth.py  test_boards.py  test_permissions.py  test_sharing.py  test_stickers.py
docs/: auth.yaml  bd_scheme.dbml  bd_scheme.txt  boards.yaml  openapi.yaml  sharing.yaml  stickers.yaml
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/board/: page.tsx
frontend/app/board/[id]/: page.tsx
frontend/app/boards/: page.tsx
frontend/app/boards/[id]/: page.tsx
frontend/app/components/: sticker.tsx
frontend/app/constants/: borders.ts
frontend/app/hooks/: useWebSocket.ts
